# HFT-Benchmark-Platform

./: .gitignore  CMakeLists.txt  Makefile  README.md  bot.py  cold-start-test.sh  dashboard.py  leaderboard.py  server.py
deploy/: docker-compose.yml  redpanda-console-config.yml
deploy/dockerfiles/: Dockerfile.service
deploy/gcp/: build_and_push.sh  deploy_cloud.sh
deploy/gcp/helm/: production-values.yaml  secrets-setup.sh
deploy/gcp/k8s/: network-policies.yaml
deploy/gcp/terraform/: .terraform.tfstate.lock.info  main.tf  terraform.tfstate.1781431703.backup  terraform.tfstate.1781433870.backup  variables.tf
deploy/helm/platform/: Chart.yaml  values.yaml
deploy/helm/platform/templates/: bot-orchestrator.yaml  bot-worker.yaml  gateway.yaml  gvisor-runtimeclass.yaml  keda-bot-worker.yaml  leaderboard-svc.yaml  sandbox-mgr.yaml  scoring-engine.yaml  submission-svc.yaml
deploy/migrations/: 001_init.sql  002_telemetry.sql
deploy/terraform/: main.tf
docs/: architecture_blueprint.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/hooks/: useWebSocket.js
frontend/src/pages/: LeaderboardView.jsx  RunDetailView.jsx  SubmissionConfirmationView.jsx  SubmitView.jsx
pkg/orderbook/: CMakeLists.txt
pkg/orderbook/include/orderbook/: orderbook.hpp
pkg/orderbook/src/: orderbook.cpp
scripts/: run-demo.sh  start-all.sh  upload-and-test.sh
services/: CMakeLists.txt  vcpkg.json
services/bot-orchestrator/: CMakeLists.txt
services/bot-orchestrator/src/: main.cpp
services/bot-worker/: CMakeLists.txt
services/bot-worker/src/: bot.cpp  bot.h  config.h  main.cpp  reporter.cpp  reporter.h  sender.cpp  sender.h  worker.cpp  worker.h
services/gateway/: CMakeLists.txt
services/gateway/src/: main.cpp
services/leaderboard-svc/: CMakeLists.txt
services/leaderboard-svc/src/: main.cpp
services/sandbox-mgr/: CMakeLists.txt
services/sandbox-mgr/src/: config.h  handler.cpp  handler.h  k8s_client.h  main.cpp  models.h  sandbox_service.cpp  sandbox_service.h
services/scoring-engine/: CMakeLists.txt
services/scoring-engine/src/: main.cpp
services/submission-svc/: CMakeLists.txt
services/submission-svc/src/: go.mod  go.sum  main.cpp  publish.go
templates/cpp-exchange/: CMakeLists.txt
templates/cpp-exchange/src/: main.cpp
